service_tucana.yml
apiVersion: v1
kind: Service
metadata:
  name: coatrack-admin
  namespace: coatrack
spec:
  selector:
    app.kubernetes.io/name: coatrack-admin
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: coatrack-config-server
  namespace: coatrack
spec:
  selector:
    app.kubernetes.io/name: coatrack-config-server
  ports:
    - protocol: TCP
      name: http
      port: 8998
      targetPort: 8998
  type: ClusterIP
